HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeEnumWithoutLayoutC/Expected.uv
//! Expected diagnostic metadata for the FfiSafeEnumWithoutLayoutC rejected-source specimen.

expectedDiagnostic("E-TYP-2625", "rule.23.FfiSafe-Enum-LayoutC-Err")
